--- a/client/src/App.css
+++ b/client/src/App.css
@@ -20,7 +20,7 @@ body{
 }
 .main-container ul li{
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr ;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr ;
   align-items: center;
 }
 
